Installed jQuery hoverintent script via bower

--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
 							</ul>
 
 			</div><!--End of "container_bottom-->
+
+			<!--Installed jQuery hoverintent script via bower. All bower plugins require link below.-->
+			<script src="path/to/bower_components/jquery/jquery.min.js"></script>
+
 		</footer>
 
 
